--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,6 +31,15 @@ about:
   home: http://toolz.readthedocs.org/
   license: BSD 3-Clause
   summary: A functional standard library for Python.
+  description: |
+    Toolz provides a set of utility functions for iterators, functions, and
+    dictionaries. These functions interoperate well and form the building
+    blocks of common data analytic operations. They extend the standard
+    libraries itertools and functools and borrow heavily from the standard
+    libraries of contemporary functional languages.
+  doc_url: http://toolz.readthedocs.org/en/latest/
+  doc_source_url: https://github.com/pytoolz/toolz/blob/master/doc/source/index.rst
+  dev_url: https://github.com/pytoolz/toolz
 
 extra:
   recipe-maintainers:
